# csed451

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/: car.mtl  floor.mtl  floor2.mtl  gouraud.frag  gouraud.vert  phong.frag  phong.vert  rooster.mtl  sneakers.mtl  transform.glsl  tree.mtl  truck.mtl  wireframe.glsl
examples/: CMakeLists.txt  ecs_polygons.cpp  gouraud_shading.cpp  phong_shading.cpp  teapot.cpp  teapot_shader.cpp  texture_mapping.cpp
include/: bounding_box.hpp  components.hpp  grid.hpp  model.hpp  registry.hpp  scene.hpp  shader_program.hpp  systems.hpp  texture.hpp  utils.hpp
include/ecs/: context.hpp  entities.hpp  systems.hpp
lecture/: CMakeLists.txt  lec02_keyboard.cpp  lec02_rectangle.cpp  lec02_rectangle_animation.cpp  setup_test_demo.cpp
src/: CMakeLists.txt  bounding_box.cpp  components.cpp  game.cpp  grid.cpp  model.cpp  registry.cpp  scene.cpp  shader_program.cpp  systems.cpp  texture.cpp  utils.cpp
src/ecs/: CMakeLists.txt  entities.cpp
