cmake_minimum_required(VERSION 3.19)
project(CSED451)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")

find_package(OpenGL REQUIRED)
find_package(GLUT REQUIRED)
find_package(GLEW REQUIRED)
if (NOT DEFINED GLM_INCLUDE_DIR)
  find_package(glm REQUIRED)
endif()

if (WIN32)
  configure_file("${GLUT_LIBRARIES}/../../bin/freeglut.dll" "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/freeglut.dll" COPYONLY)
  configure_file("${GLEW_LIBRARIES}/../../../../bin/Release/Win32/glew32.dll" "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/glew32.dll" COPYONLY)
endif()

function(add_gl_executable_single_file exec_name source_file)
  add_executable(${exec_name} ${source_file})
  target_link_libraries(${exec_name} OpenGL::GL GLUT::GLUT GLEW::glew)
  target_compile_definitions(${exec_name} PRIVATE GL_SILENCE_DEPRECATION)
  if (DEFINED GLM_INCLUDE_DIR)
    target_include_directories(${exec_name} PRIVATE ${GLM_INCLUDE_DIR})
  else()
    target_link_libraries(${exec_name} glm::glm)
  endif()
endfunction()

add_subdirectory(lecture)
